# direct_event_camera_tracker

./: README.md  dependencies.yaml
direct_event_camera_tracker/: CMakeLists.txt  datasource.cpp  datasource.h  error.h  event_buffer.cpp  event_buffer.h  keyframe.cpp  keyframe.h  main.cpp  main.h  package.xml  point.cpp  point.h  point_yaml.h  polyfit.h  pyramid.cpp  pyramid.h  temp_shader_test.glsl  utils.cpp  utils.h  valgrind_suppressions  warp.h
direct_event_camera_tracker/cfg/: main.yaml
direct_event_camera_tracker/core/: camera_image.cpp  camera_image.h  camera_intrinsics.cpp  camera_intrinsics.h  image_data.cpp  image_data.h
direct_event_camera_tracker/gui/: ImageLabel.cpp  ImageLabel.h  StateTable.cpp  StateTable.h  application.cpp  application.h  errorplot.cpp  errorplot.h  evo_map_publisher.cpp  evo_map_publisher.h  evo_map_publisher.ui  general_jacobi_tester.cpp  general_jacobi_tester.h  maingui.cpp  maingui.h  maingui.ui  plotmatrix.cpp  plotmatrix.h  render_jacobi_tester.cpp  render_jacobi_tester.h  se3_pose_editor.cpp  se3_pose_editor.h
direct_event_camera_tracker/lib/sophus/: common.hpp  se3.hpp  so3.hpp
direct_event_camera_tracker/opengl/: framebuffer.cpp  framebuffer.h  world_renderer.cpp  world_renderer.h
direct_event_camera_tracker/optimization/: opt_analytic.cpp  opt_analytic.h  opt_debug.cpp  opt_debug.h  opt_forward_warp.cpp  opt_forward_warp.h  opt_rerender.cpp  opt_rerender.h  optimization.cpp  optimization.h
direct_event_camera_tracker/utils/: bag_synchronizer.h  ceres.cpp  ceres.h  profiler.h  timer.h
scripts/: eval_tracking.py  (+7 more)
(+10 files in other folders)
